--- a/src/pages/headers-and-footers/headers-and-footers.pug
+++ b/src/pages/headers-and-footers/headers-and-footers.pug
@@ -8,12 +8,12 @@ block header
   meta(name="keywords", content="Headers and footers")
 
 block content
-  section.headersAndFooters 
-    .headersAndFooters__first
+  section.headers-and-footers 
+    .headers-and-footers__first
       +header({id: 'header1'})
-    .headersAndFooters__second
+    .headers-and-footers__second
       +header({id: 'header2', auth: true})
-    .headersAndFooters__footer 
+    .headers-and-footers__footer 
       +footer({id: 'footer1', type: 'full'})
-    .headersAndFooters__footer--small 
+    .headers-and-footers__footer--small 
       +footer({id: 'footer2', type: 'Small'})
