--- a/src/pages/landing-page/landing-page.pug
+++ b/src/pages/landing-page/landing-page.pug
@@ -7,7 +7,7 @@ block header
   meta(name="keywords", content="landing page")
 
 block content
-  section.landingPage
-    .landingPage__findForm 
+  section.landing-page
+    .landing-page__findForm 
       +find-rooms({id: 'landingPage__findRooms1'})
-    .landingPage__text Лучшие номера для вашей работы, отдыха и просто вдохновения
+    .landing-page__text Лучшие номера для вашей работы, отдыха и просто вдохновения
