--- a/src/pages/login-page/login-page.pug
+++ b/src/pages/login-page/login-page.pug
@@ -7,6 +7,6 @@ block header
   meta(name="keywords", content="login page")
 
 block content
-  section.loginPage
-    .loginPage__loginForm 
+  section.login-page
+    .login-page__loginForm 
       +login({id: 'loginPageLogin1'})
