--- a/src/pages/registration-page/registration-page.pug
+++ b/src/pages/registration-page/registration-page.pug
@@ -7,6 +7,6 @@ block header
   meta(name="keywords", content="Registration page")
 
 block content
-  section.registrationPage
-    .registrationPage__registrationForm 
+  section.registration-page
+    .registration-page__registrationForm 
       +registration({id: 'registrationPage__registration1', textButton: 'зарегистрироваться'})
