--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -1,4 +1,4 @@
-.roomDetails {
+.room-details {
   margin-bottom: 15px;
 
   &__imgBlock {
@@ -84,7 +84,7 @@
   }
 
   &__review {
-    & .roomDetails__header {
+    & .room-details__header {
       margin-bottom: 2px;
     }
 
@@ -96,7 +96,7 @@
   &__comments {
     margin-top: 34px;
 
-    & .roomDetails__comment-header {
+    & .room-details__comment-header {
       margin-bottom: 13px;
     }
   }
@@ -133,7 +133,7 @@
 
   &__rules {
     margin: 4px 100px 0 0;
-    & .roomDetails__header {
+    & .room-details__header {
       margin: 7px 0 0 20px;
     }
 
@@ -145,12 +145,12 @@
   &__freeCancle {
     margin-top: 15px;
 
-    & .roomDetails__header {
+    & .room-details__header {
       padding: 0;
       margin-top: -2px;
     }
 
-    & .roomDetails__text {
+    & .room-details__text {
       width: 342px;
       @media (max-width: 380px) {
         width: 100%;
