--- a/src/pages/registration-page/registration-page.scss
+++ b/src/pages/registration-page/registration-page.scss
@@ -1,4 +1,4 @@
-.loginPage {
+.registration-page {
   width: 1534px;
   min-height: 684px;
   background-image: url('../../images/image\ 4.jpg');
@@ -6,13 +6,13 @@
   background-position: 0% 100%;
   display: flex;
   align-items: center;
-  @media (max-width: 1380px) {
+  @media (max-width: 1500px) {
     width: 100%;
   }
 
-  &__loginForm {
-    margin-left: 530px;
-    @media (max-width: 1380px) {
+  &__registrationForm {
+    margin-left: 533px;
+    @media (max-width: 1500px) {
       margin: 0 auto;
     }
   }
